examples/high-quality-code/coupling/coupling-types/bad/internal-knowledge/global-data/b-module.mjs
import { shapeData } from "./shared-data.mjs";

export function calculateShapeArea() {
  return shapeData.width * shapeData.height;
}
